<resources>
    <string name="app_name">Riva Voice</string>
    <string name="title_activity_welcome">Riva Voice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="release_all">Drop All</string>
    <string name="splashscreen_maintext">Multiroom Audio Systems</string>
    <string name="brand_name">Riva Voice</string>
    <string name="app_version">v1p4</string>
    <string name="configure_speaker">Configure speaker</string>
    <string name="new_sac_activity_title">Current Speaker Status</string>
    <string name="powered_text">Powered by DDMS technology</string>
    <string name="title_activity_configure">Sound Scenes</string>
    <string name="configure_button">Configure</string>
    <string name="configuration_text">No Speaker Found or Configured</string>
    <string name="configuration_subtext">Search and configure your Speaker</string>
    <string name="playnew_text">No Sound Scenes are Active</string>
    <string name="playnew_subtext">Choose from your favorites </string>
    <string name="playnew_button">Play New</string>
    <string name="play_music">Play music from…</string>
    <string name="favorite_button">Favorites</string>
    <string name="favorite_button_playcast">Play Cast</string>
    <string name="sacInstruction">Configure your Grundig speaker using SAC method</string>
    <string name="title_activity_active_scenes_list">Active Scenes</string>
    <string name="title_activity_sac_list_speakers">Configure Speakers</string>
    <string name="title_activity_speakers_setup">Speaker Setup</string>
    <string name="title_activity_lssdp_network_Settings">Speaker Setup</string>
    <string name="flip_button">Flip_Option</string>
    <string name="notification_ticker_text">Multi Room Audio</string>
    <string-array name="audio_output_array">
        <item>Stereo (S)</item>
        <item>Left Speaker (L)</item>
        <item>Right Speaker (R)</item>
        
    </string-array>
    <string-array name="networkType_array">
        <item>NONE</item>
        <item>WPA/WPA2</item>
        <item>WPA2-PSK</item>
        
    </string-array>
    <string-array name="keyitem_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="audio_preset_array">
        <item>Normal</item>
        <item>Flat</item>
        <item>Vocal</item>
        <item>Rock</item>
        <item>DRC</item>
    </string-array>
    <string name="tidal_default_img">Tidal Default</string>
    <string name="footer_name">Done</string>
    <string name="footer_name_save">Save</string>
    <string name="storagePermissionToast">Storage permission required for loading songs</string>
    <string name="title_activity_network_settings">NetworkSettings</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_activity_sac_list">SacListActivity</string>
    <string name="title_home_network_settings">Home Network Settings</string>
    <string name="lsdp_device_title">Configured Speakers</string>
    <string name="sac_device_titel">Speakers To Be Setup</string>
    <string name="spotifyConnect">Spotify Connect</string>
    <string name="ssid_list_titel">Home Network</string>
    <string name="device_setup">Speaker Setup</string>
    <string name="BtOnAlert">Turning On BT</string>
    <string name="BtOffAlert">Turning Off BT</string>
    <string name="AuxOnAlert">Turning On AUX</string>
    <string name="AuxOffAlert">Turning Off AUX</string>
    <string name="title_outdoor_network">Outdoor Network Settings</string>
    <string name="title_name_your_network">Name Your Network : </string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="searchList">Search</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_select_source_device">Select Source Speaker</string>
    <string name="networkChanged">Network changed</string>
    <string name="requestTimeout">Device response timed out. Please try again</string>
    <string name="searchingRenderer">Searching the renderer</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="browseSongs">Browse Songs</string>
    <string name="browseFailed">Browse content failed!</string>
    <string name="notice">Notice</string>
    <string name="deviceNotFound">Speaker not found</string>
    <string name="noContent">No content</string>
    <string name="loadingMusic">Loading the music contents.Please wait..</string>
    <string name="deviceMissing">Oops! Speaker is missing! check if it is still connected</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="cannotCreateDMS">Cannot create DMS Processor</string>
    <string name="loadingLocalContent">Loading Local contents</string>
    <string name="restartAppManually">Loading of Local content failed! Auto restarting is failed.Please restart the app manually!</string>
    <string name="LEDFlashing">Flashing</string>
    <string name="LEDSmoothness">Smoothness</string>
    <string name="LEDTCPFail">Tcp Socket Creation Failed for the Port Number 50005</string>
    <string name="enterUsernamePassword">Please enter your user name and password</string>
    <string name="enterUsername">Please enter user name</string>
    <string name="enterPassword">Please enter password</string>
    <string name="grouping">Grouping</string>
    <string name="groupingMsg">To Group this Speaker Select Any of these Options ?</string>
    <string name="refreshing">Please wait.... Its Refreshing ...</string>
    <string name="changing">Changing </string>
    <string name="deviceStateChanging">Device State Changing</string>
    <string name="failed">FAILED</string>
    <string name="googleTerms">Google Terms of Service</string>
    <string name="accept">Accept</string>
    <string name="yes">Yes</string>
    <string name="createCastGrp">Create a cast group</string>
    <string name="sceneNameChanging">Scene Name Changing</string>
    <string name="sceneNameChangingError">Please click on check button then save.</string>
    <string name="sceneNameChangingMsg">You tried to change the Device Name.Do you want to proceed without saving?</string>
    <string name="deviceName">Speaker Name : </string>
    <string name="deviceNameChanging">Device Name Changing</string>
    <string name="deviceNameEmpty">FAILED\nSpeaker Name Cannot Be an Empty</string>
    <string name="deviceLength">Speaker Name cannot be more than 50</string>
    <string name="deviceLengthReached">Speaker Name Maximum length reached</string>
    <string name="sceneNameLength">Scene Name cannot be more than 50</string>
    <string name="sceneLengthReached">Scene Name Maximum length reached</string>
    <string name="deviceNameChangingMsg">You tried to change the Speaker Name.Do you want to go back without saving?</string>
    <string name="googleCastAccess">Thanks!: Now you can access Google Cast Settings!</string>
    <string name="dontShowAgain">Dont Show Again</string>
    <string name="help">Help</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="ask_alexa1">Alexa, what\'s the weather?</string>
    <string name="ask_alexa2">Alexa, play my Flash Briefing.</string>
    <string name="ask_alexa3">Alexa, what are some top rated \nIndian restaurants?</string>
    <string name="ask_alexa4">Alexa, set Timer for 20 mins.</string>
    <string name="sign_in_az">Sign in to your Amazon account to enable Alexa Voice Service features.</string>
    <string name="engUSLang">English (US)</string>
    <string name="engUKLang">English (UK)</string>
    <string name="deutschLang">Deutsch</string>
    <string name="about">Copyright 2016 Amazon.com, Inc. or its affiliates. All Rights Reserved.\n\nLicensed under the Amazon Software License (the "License").\nYou may not use this file except in compliance with the License.\nA copy of the License is located at\n\nhttp://aws.amazon.com/asl/
\n\nor in the "license" file accompanying this app. This app is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="add">Add</string>
    <string name="no_device_found">No speaker found</string>
    <string name="make_sure_devices_connected_to_wifi">Make sure all of your speakers are connected to the same Wi-Fi and refresh</string>
    <string name="refresh">Refresh</string>
    <string name="using_speaker_first_time">Using the speaker for the first time?</string>
    <string name="setup_speaker">Setup New Speaker</string>
    <string name="device_setup2">Speaker Setup</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="hmmm">Hmmm…</string>
    <string name="not_sure_device_setup_completed">We are not able to make sure whether the speaker setup has completed.</string>
    <string name="device_light_white">If the speaker light is white.</string>
    <string name="make_sure_connected_to_same_wifi">Make sure your phone is connected to the same Wi-Fi network*</string>
    <string name="device_blinking_white">If the speaker light is blinking white.</string>
    <string name="entered_incorrect_wifi_pwd">You might have entered incorrect Wi-Fi password*</string>
    <string name="device_blinking_colors">If the speaker light is blinking colors.</string>
    <string name="update_pending_wait">The updating is still going on, please wait a few minutes.</string>
    <string name="start_setup_resetting_msg">*You can start the setup again by resetting your speaker.</string>
    <string name="ok_got_it">OK, I got it</string>
    <string name="select_locale">Select locale for Alexa</string>
    <string name="alexa_not_connected">Amazon Alexa account not connected</string>
    <string name="select_audio_output">Select audio output</string>
    <string name="trillium">Trillium</string>
    <string name="power">Power</string>
</resources>